# turu

./: LICENSE  README.md
frontend/: .ghci  Readme.mkd  Turu VM - Tudo.md  accept-test.hs  fourmolu.yaml  frontend.cabal  ghci.ghci  hie.yaml
frontend/examples/: Def.turu  arith.turu  arith.turu.result  builtin.turu  fib.turu  fib.turu.result  higher_order.turu  higher_order.turu.result  let2.turu  list.turu  list.turu.result
frontend/examples/io/: print.turu
frontend/examples/parser/: any.turu
frontend/examples/primops/: addInt.turu  headStr.turu  print.turu  readInt.turu  readStr.turu  tailStr.turu
frontend/src/: Main.hs  Misc.hs
frontend/src/Turu/: AST.hs  Builtins.hs  Eval.hs  Parser.hs  Prelude.hs  Pretty.hs  SymTab.hs  Tc.hs  Test.hs
frontend/src/Turu/AST/: Name.hs  Rename.hs  Utils.hs  Var.hs
frontend/src/Turu/Asm/: CodeGen.hs  Instr.hs
frontend/src/Turu/Builtins/: PrimOps.hs
frontend/src/Turu/Bytecode/: Expr.hs  Monad.hs  Types.hs
frontend/src/Turu/Eval/: Builtins.hs  Reduce.hs  Show.hs  State.hs  Types.hs
frontend/src/Turu/Tc/: Builtins.hs  Infer.hs  Subst.hs  Type.hs  Unify.hs
frontend/test/: TestExamples.hs  TestFile.hs  TestParser.hs  head.turu  let.turu  let2.turu  twice.turu
frontend/test/Types/: Test.hs
