cabal-version:      2.4
name:               frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable frontend
    main-is:          Main.hs

    ghc-options: -Wall -Wno-unused-imports

    other-modules:
        Turu.AST
        Turu.AST.Utils
        Turu.AST.Name
        Turu.AST.Rename
        Turu.Prelude
        Turu.SymTab
        Turu.Eval.Reduce
        Turu.Parser
        Turu.Pretty
        Turu.Builtins
        Turu.Eval.State
        Turu.Eval.Builtins

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.15.0.0 && < 4.17
       ,text
       ,megaparsec
       ,parser-combinators
       ,containers
       ,unordered-containers
       ,hashable
       ,transformers
       ,mtl
       ,pretty
       ,pretty-show
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        GADTs,
        OverloadedStrings,
        StrictData,
        GeneralizedNewtypeDeriving,
        TypeApplications
        ScopedTypeVariables,
        NamedFieldPuns

executable test-parser
    default-language: Haskell2010
    hs-source-dirs: src, test
    main-is: TestParser.hs

    default-extensions:
        GADTs,
        OverloadedStrings,
        StrictData,
        GeneralizedNewtypeDeriving,
        TypeApplications,
        NamedFieldPuns,
        ScopedTypeVariables


    other-modules:
        Turu.AST
        Turu.AST.Name
        Turu.AST.Utils
        Turu.AST.Rename
        Turu.Prelude
        Turu.SymTab
        Turu.Eval.Reduce
        Turu.Parser
        Turu.Pretty
        Turu.Builtins
        Turu.Eval.State
        Turu.Eval.Builtins

    build-depends:
        base >=4.15.0.0 && < 4.17
       ,text
       ,megaparsec
       ,parser-combinators
       ,containers
       ,unordered-containers
       ,hashable
       ,transformers
       ,tasty
       ,tasty-hunit
       ,pretty
       ,pretty-show
       ,mtl
