cabal-version:      3.4
name:               frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andreas Klebinger
maintainer:         klebinger.andreas@gmx.at

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable frontend
    import common-modules

    -- profiling-detail: none
    main-is:          Main.hs

    ghc-options: -Wall -Wno-unused-imports


    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.15.0.0 && <= 4.18
       ,text
       ,megaparsec
       ,parser-combinators
       ,containers
       ,unordered-containers
       ,hashable
       ,transformers
       ,mtl
       ,pretty
       ,pretty-show
       ,filepath
       ,directory
       ,cborg
       ,ghc
       ,ghc-paths

    other-modules:
        Turu.AST
        Turu.AST.Utils
        Turu.AST.Name
        Turu.AST.Rename
        Turu.AST.Var
        Turu.Asm.Instr
        Turu.Asm.CodeGen
        Turu.Bytecode.Types
        Turu.Bytecode.Expr
        Turu.Bytecode.Monad
        Turu.Prelude
        Turu.SymTab
        Turu.Tc
        Turu.Tc.Type
        Turu.Tc.Subst
        Turu.Tc.Infer
        Turu.Tc.Builtins
        Turu.Eval.Reduce
        Turu.Eval.Show
        Turu.Parser
        Turu.Pretty
        Turu.Builtins
        Turu.Builtins.PrimOps
        Turu.Eval.Builtins
        Turu.Eval.Types
        Misc

    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        GADTs,
        OverloadedStrings,
        StrictData,
        GeneralizedNewtypeDeriving,
        TypeApplications,
        ScopedTypeVariables,
        NamedFieldPuns,
        BangPatterns

executable test-parser
    default-language: Haskell2010
    hs-source-dirs: src, test
    main-is: TestParser.hs

    default-extensions:
        GADTs,
        OverloadedStrings,
        StrictData,
        GeneralizedNewtypeDeriving,
        TypeApplications,
        NamedFieldPuns,
        ScopedTypeVariables,
        BangPatterns


    other-modules:
        Turu.AST
        Turu.AST.Name
        Turu.AST.Utils
        Turu.AST.Var
        Turu.AST.Rename
        Turu.Asm.Instr
        Turu.Asm.CodeGen
        Turu.Tc
        Turu.Tc.Type
        Turu.Bytecode.Types
        Turu.Bytecode.Expr
        Turu.Bytecode.Monad
        Turu.Prelude
        Turu.SymTab
        Turu.Eval.Reduce
        Turu.Eval.Show
        Turu.Parser
        Turu.Pretty
        Turu.Builtins
        Turu.Builtins.PrimOps
        Turu.Eval.Builtins
        Turu.Eval.Types

        Misc

        Types/Test.hs
        TestFile
        TestExamples


    build-depends:
        base >=4.15.0.0 && < 4.18
       ,text
       ,megaparsec
       ,parser-combinators
       ,containers
       ,unordered-containers
       ,hashable
       ,transformers
       ,tasty
       ,tasty-hunit
       ,pretty
       ,pretty-show
       ,mtl
       ,filepath
       ,directory
       ,cborg
       ,ghc
       ,ghc-paths
